# mfsum

./: .gitignore  Makefile.am  README.md  configure.ac  mfsum.pc.in
inc/: memory.h  mfsum.h  stack.h
src/: main.c  memory.c  mfsum.c  stack.c
test/: quick_test.c
